--- a/src/containers/TopMenu/TopMenu.scss
+++ b/src/containers/TopMenu/TopMenu.scss
@@ -1,4 +1,4 @@
-@import '../../scss/common';
+@import "../../scss/common";
 
 .ui.card {
   width: 100% !important;
@@ -26,7 +26,7 @@
   justify-content: center;
 }
 .menu-logo .item a {
-  color: '#ba242d';
+  color: "#ba242d";
   font-weight: 600;
 }
 
@@ -60,4 +60,8 @@
 
 .drop-left-padding {
   padding-left: 0 !important;
+}
+
+.menu-search {
+  padding: 5px !important;
 }
